--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md   fixed-top w-100 " style="background-color: #c9303d; max-height: 400px; ">
             <div class="container-fluid collapse" style="color: #EAE7F1;" title="Configuracion">
                 <a class="navbar-brand w-25 " href="#" style="color: #EAE7F1; max-width: 18%;">
-                    <img src="img/LOGO SURTIMAX 30 AÑOS_LOGO SURTIMAX 30 AÑOS.png" class="img-fluid   "
+                    <img src="img/logotipo-limpio.png" class="img-fluid ms-2  "
                         alt="logo_surtimax" style="max-height: 90px;" title="Inicio"></a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
