--- a/reportes.html
+++ b/reportes.html
@@ -23,7 +23,7 @@
             <div class="container-fluid collapse " style="color: #EAE7F1;" title="Configuracion">
                 <a class="navbar-brand w-25 " href="#" style="color: #EAE7F1; max-width: 18%;">
                     <!-- Logo -->
-                    <img src="img/LOGO SURTIMAX 30 AÑOS_LOGO SURTIMAX 30 AÑOS.png" class="img-fluid   "
+                    <img src="img/logotipo-limpio.png" class="img-fluid   "
                         alt="logo_surtimax" style="max-height: 90px;" title="Inicio">
                 </a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
