Agrego interfaz usuarios con modal para agregar usuario

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
             <div class="container-fluid collapse " style="color: #EAE7F1;" title="Configuracion">
                 <a class="navbar-brand w-25 " href="#" style="color: #EAE7F1; max-width: 18%;">
                     <!-- Logo -->
-                    <img src="img/logotipo-limpio.png" class="img-fluid   "
+                    <img src="img/LogoIlustracionLateral.png" class="img-fluid   "
                         alt="logo_surtimax" style="max-height: 90px;" title="Inicio">
                 </a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -235,6 +235,7 @@
             
             <div class="row p-1 m-1">
                 <div class="col">
+                    <a href="usuarios.html">
                     <button class="btn btn-outline-light border-0  w-100 my-1">
                         <div class="row align-items-center">
                             <div class="col-2 px-2">
@@ -249,6 +250,7 @@
                             </div>
                         </div>
                     </button>
+                </a>
                 </div>
             </div>
             
