--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md   fixed-top w-100 " style="background-color: #c9303d; max-height: 400px; ">
             <div class="container-fluid collapse" style="color: #EAE7F1;" title="Configuracion">
                 <a class="navbar-brand w-25 " href="#" style="color: #EAE7F1; max-width: 18%;">
-                    <img src="img/logotipo-limpio.png" class="img-fluid ms-2  "
+                    <img src="img/LogoIlustracionLateral.png" class="img-fluid ms-2  "
                         alt="logo_surtimax" style="max-height: 90px;" title="Inicio"></a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,8 +127,8 @@
                                 <img src="img/MAX2 (1).png" alt="logo" class="img-fluid rounded-circle pt-0  mt-2 border border-success"
                                     style="max-width: 35%;">
                             </div>
-                            <div class="mb-4 text-center fw-semibold fs-3 input-group">
 
+                            <div class="mb-4 text-center fw-semibold fs-3 input-group">
                                 <div class="input-group-text">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                                         class="bi bi-person-fill" viewBox="0 0 16 16">
@@ -136,7 +136,6 @@
                                             d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                                     </svg>
                                 </div>
-
                                 <input type="text" class="form-control" placeholder="Usuario" required>
                             </div>
 
