Se carga la pagina de error 404 y las fuentes necesarias

--- a/dashboard.html
+++ b/dashboard.html
@@ -87,15 +87,15 @@
                                   </svg>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" >
-                                <li><a href="#" class="dropdown-item">Perfil</a>
-                                    <a href="#" class="dropdown-item">Ayuda</a>
-                                    <a href="index.html" data-bs-toggle="modal" data-bs-target="#miModal">
+                                <li><a href="404.html" class="dropdown-item" title="Perfil">Perfil</a>
+                                    <a href="404.html" class="dropdown-item" title="ayuda">Ayuda</a>
+                                    <a href="index.html" data-bs-toggle="modal" data-bs-target="#miModal" title="salir">
                                         <div class="row p-1" >
                                             <div class="col">
-                                                <button class="btn btn-outline-danger w-100 my-1" type="button" >
+                                                <button class="btn btn-outline-danger fw-bolder border-0 w-100 my-1" type="button" >
                                                     <div class="row align-items-center" >
-                                                        <div class="col-2" >
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                                                        <div class="col-2" title="salir" >
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                                                 <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
                                                                 <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
                                                             </svg>
