--- a/ventas.html
+++ b/ventas.html
@@ -87,7 +87,7 @@
                                   </svg>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" >
-                                <li><a href="#" class="dropdown-item">Perfil</a>
+                                <li><a href="404.html" class="dropdown-item">Perfil</a>
                                     <a href="#" class="dropdown-item">Ayuda</a>
                                     <a href="index.html" data-bs-toggle="modal" data-bs-target="#miModal">
                                         <div class="row p-1" >
@@ -237,6 +237,7 @@
             
             <div class="row p-1 m-1">
                 <div class="col">
+                    <a href="usuarios.html">
                     <button class="btn btn-outline-light border-0  w-100 my-1">
                         <div class="row align-items-center">
                             <div class="col-2 px-2">
@@ -251,6 +252,7 @@
                             </div>
                         </div>
                     </button>
+                </a>
                 </div>
             </div>
             
