Se carga la pagina de error 500 y los links en para cargar desde perfil y ayuda

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class="navbar navbar-expand-md   fixed-top w-100 " style="background-color: #c9303d; max-height: 400px; ">
             <div class="container-fluid collapse" style="color: #EAE7F1;" >
-                <a class="navbar-brand w-25 " href="#" style="color: #EAE7F1; max-width: 18%;" >
+                <a class="navbar-brand w-25 " href="500.html" style="color: #EAE7F1; max-width: 18%;" >
                     <img src="img/LogoIlustracionLateral.png" class="img-fluid ms-2  "
                         alt="logo_surtimax" style="max-height: 90px;" title="Inicio"></a>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
