--- a/500.html
+++ b/500.html
@@ -23,15 +23,15 @@
 
    <div class="row my-5  shadow-lg maxFondo rounded-4  " style="opacity: 1;">
         <div class="col-6 container align-content-start d-flex align-items-center " transition-style="out:custom:circle-swoop">
-            <img src="img/404.png" class=" img-fluid w-100 mt-5 " alt="">
+            <img src="img/500.png" class=" img-fluid w-100 mt-5 " alt="">
         </div>
         <div class="col-6 text-center  ops mt-5 ">
             
-            <div  > Opps!! <br> No pudimos encontrar esa <div class="rotate-90-cw"> página :(</div> </div>
+            <div  > Opps!! <br> No pudimos encontrar el <div class="rotate-90-cw"> servidor :( </div> </div>
             <div class=" row mt-3  vuelve  align-items-center ">
                 <div class="border-0 mt-5 mb-2 ">
                     <a href="dashboard.html">
-                        <button class="btn btn-outline-light volverBTN border-0 pulse ">VOLVER</button>
+                        <button class="btn btn-outline-light volverBTN border-0 pulse ">VOLVER!!</button>
                     </a>
                 </div>
                 
