--- a/reportes.html
+++ b/reportes.html
@@ -88,7 +88,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" >
                                 <li><a href="404.html" class="dropdown-item">Perfil</a>
-                                    <a href="#" class="dropdown-item">Ayuda</a>
+                                    <a href="500.html" class="dropdown-item">Ayuda</a>
                                     <a href="index.html" data-bs-toggle="modal" data-bs-target="#miModal">
                                         <div class="row p-1" >
                                             <div class="col">
